# jax

./: pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
tutorials/: MLP.ipynb
tutorials/.ipynb_checkpoints/: MLP-checkpoint.ipynb
